<resources>
    <string name="app_name">AnimeSocialApp</string>

    <string name="username_label">Username</string>
    <string name="password_label">Password</string>

    <string name="title_label">Name</string>
    <string name="description_label">Description</string>
    <string name="anime_label">Anime</string>
    <string name="review_label">Review</string>
    <string name="synopsis_label">Synopsis</string>

    <string name="reviews_label">Reviews</string>
    <string name="lists_label">Lists</string>

    <string name="login_label">Log In</string>
    <string name="signup_label">Sign Up</string>
    <string name="logout_label">Log Out</string>
    <string name="post_label">Post</string>
    <string name="create_label">Create</string>
    <string name="done_label">Done</string>
    <string name="add_anime_label">Add Anime…</string>
    <string name="edit_anime_label">Edit Anime List…</string>

    <string name="review_hint">Your review of this anime…</string>
    <string name="list_title_hint">Add list name… </string>
    <string name="list_description_hint">Your description of this list…</string>

    <string name="home_item_label">Home</string>
    <string name="post_item_label">Post</string>
    <string name="recommended_item_label">For You</string>
    <string name="profile_item_label">Profile</string>


    <string name="filler_review_caption">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mattis vitae ante vitae tempus. Nunc volutpat lacus sed auctor. Curabitur nunc mauris, iaculis quis orci quis, venenatis vehicula tu…</string>
    <string name="filler_username">Seti</string>>
    <string name="filler_time">32 mins ago</string>
    <string name="filler_title">Steins;Gate</string>
    <string name="filler_season">Spring 2011</string>
    <string name="filler_list_name">My Top Ten</string>

    <string name="add_profile_image">Add Profile Image</string>
    <string name="change_profile_image">Change Profile Image</string>
    <string name="search_hint">Search Anime</string>

    <string name="empty_title">Your title cannot be empty</string>
    <string name="empty_list">Your anime list cannot be empty</string>
    <string name="empty_review">Your review cannot be empty</string>
    <string name="save_error">Error while saving!</string>
    <string name="save_anime">Saved Anime</string>
    <string name="save_review">Saved Review</string>
    <string name="save_list">Saved List</string>
    <string name="save_genre">Saved Genre</string>
    <string name="update_genre">Updated Genre</string>
    <string name="save_studio">Saved Studio</string>
    <string name="update_studio">Studio Updated</string>
    <string name="save_rating">Saved Rating</string>
    <string name="update_rating">Updated Rating</string>
    <string name="unknown_error">Unknown Error</string>

    <string name="username_password_empty">Username and Password cannot be empty</string>
    <string name="username_password_incorrect">Username or Password is incorrect</string>
    <string name="username_empty">Username cannot be empty</string>
    <string name="password_empty">Password cannot be empty</string>
    <string name="sign_up_failed">Sign Up Failed, Try again</string>
    <string name="login_success">Success!</string>
    <string name="save_like">Saved Liked</string>
    <string name="remove_like">Removed Liked</string>

    <string name="score_label">MAL Score</string>
    <string name="rank_label">Ranked</string>
    <string name="popularity_label">Popularity</string>
    <string name="filler_score">9.10</string>
    <string name="filler_rank">3</string>
    <string name="filler_popularity">11</string>

    <string name="filler_genre">Sci-Fi &amp; Psychological</string>
    <string name="genre_label">Genre</string>
    <string name="profile_label">Profile</string>
    <string name="recommendations_label">Recs</string>
    <string name="explore_label">Explore</string>
    <string name="home_label">Home</string>
    <string name="explore_title">Explore</string>
    <string name="post_review_title">Post Review</string>
    <string name="add_anime_title">Add Anime</string>
    <string name="create_list_title">Create List</string>
    <string name="save_year_range">Saved Year Ranged</string>
    <string name="update_year_range">Updated Year Range</string>
    <string name="details_label">Details</string>


</resources>