<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/instagram_home_filled_24"
        android:title="@string/home_label"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_explore"
        android:icon="@drawable/search"
        android:title="@string/explore_label"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_post"
        android:icon="@drawable/instagram_new_post_filled_24"
        android:title="@string/post_label"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_recs"
        android:icon="@drawable/star"
        android:title="@string/recommendations_label"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/instagram_user_filled_24"
        android:title="@string/profile_label"
        app:showAsAction="always" />
</menu>