<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_black"
    tools:context=".reviewManagement.ReviewDetailActivity">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_review_background_height"
        android:stateListAnimator="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@null"
            android:foreground="@drawable/review_tint"
            android:scaleType="centerCrop"
            tools:srcCompat="@drawable/steinsgatecover" />

        <ImageView
            android:id="@+id/ivPoster"
            android:layout_width="@dimen/detail_review_poster_width"
            android:layout_height="@dimen/detail_review_poster_height"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@null"
            tools:srcCompat="@drawable/steinsgatecover" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tvSeason"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="4dp"
            android:layout_toEndOf="@+id/ivPoster"
            android:textColor="@color/white"
            android:textSize="@dimen/detail_anime_title"
            android:textStyle="bold"
            tools:text="@string/filler_title" />

        <TextView
            android:id="@+id/tvSeason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@+id/ivPoster"
            android:textColor="@color/white"
            android:textSize="@dimen/detail_labels"
            tools:text="@string/filler_season" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <ImageView
            android:id="@+id/ivProfileImage"
            android:layout_width="@dimen/detail_profile_image"
            android:layout_height="@dimen/detail_profile_image"
            android:layout_marginStart="20dp"
            android:contentDescription="@null"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:textColor="@color/white"
            android:textSize="@dimen/detail_anime_title"
            android:textStyle="bold"
            tools:text="@string/filler_username" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvCreatedAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:textColor="@color/white"
            android:textSize="@dimen/detail_labels"
            tools:text="@string/filler_time" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvReview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:ellipsize="end"
        android:scrollHorizontally="true"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/post_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:text="@string/filler_review_caption" />

</androidx.constraintlayout.widget.ConstraintLayout>